--- a/env-builder/roles/generate_solution_structure/tasks/main.yaml
+++ b/env-builder/roles/generate_solution_structure/tasks/main.yaml
@@ -64,7 +64,7 @@
         {{ "[DEBUG] template_content: " ~ template_content | truncate(50) }}
       
         {%- set ns_name = template_content | select('match', '^\\s*name:') -%}
-        {{ "[DEBUG] ns_name: " ~ ns_lines }}
+        {{ "[DEBUG] ns_name: " ~ ns_name }}
         
         {%- if ns_name -%}
           {{- ns_name.split(':', 1)[1] | trim | replace('"', '') -}}
