Testing new logic

--- a/env-builder/roles/generate_solution_structure/tasks/main.yaml
+++ b/env-builder/roles/generate_solution_structure/tasks/main.yaml
@@ -65,7 +65,8 @@
         {%- set template_content = lookup('file', file.path).split('\n') -%}
         {{ "[DEBUG] template_content: " ~ template_content | truncate(50) }}
       
-        {%- set ns_name = template_content | select('match', '^\\s*name:') -%}
+        {%- set ns_name = template_content | select('match', '^\\s*name:') | list -%} 
+      
         {{ "[DEBUG] ns_name: " ~ ns_name }}
         
         {%- if ns_name -%}
