--- a/env-builder/roles/generate_solution_structure/tasks/main.yaml
+++ b/env-builder/roles/generate_solution_structure/tasks/main.yaml
@@ -58,9 +58,12 @@
         {%- set deploy_postfix = base_name.split('.') | first -%}
         {%- set template_content = lookup('file', file.path).split('\n') -%}
         {%- set ns_name = template_content | select('match', '^\\s*name:') | list -%} 
+        {{ "[DEBUG] ns_name: " ~ ns_name }}
         {%- if ns_name | length > 0 -%}
           {%- set ns_line = ns_name[0] -%}
+          {{ "[DEBUG] ns_line: " ~ ns_name }}
           {%- set ns_value = ns_line.split(':', 1)[1] | trim | replace('"', '') -%}
+          {{ "[DEBUG] ns_value: " ~ ns_name }}
           {%- set ns_map = ns_map | combine({deploy_postfix: ns_value}) -%}
         {%- else -%}
           {%- set ns_map = ns_map | combine({deploy_postfix: ''}) -%}
