--- a/env-builder/roles/generate_solution_structure/tasks/main.yaml
+++ b/env-builder/roles/generate_solution_structure/tasks/main.yaml
@@ -61,8 +61,9 @@
         {%- if ns_line_list | length > 0 -%}
           {%- set ns_line = ns_line_list[0] -%}
           {%- set ns_value = ns_line.split(':', 1)[1] | trim | replace('"', '') -%}
+          {%- set ns_map = ns_map | combine({deploy_postfix: ns_value}) -%}
         {%- else -%}
-          {%- set ns_value = '' -%}
+          {%- set ns_map = ns_map | combine({deploy_postfix: ''}) -%}
         {%- endif -%}
       {%- endfor -%}
       {{ ns_map }}
