Testing new logic

--- a/env-builder/roles/generate_solution_structure/tasks/main.yaml
+++ b/env-builder/roles/generate_solution_structure/tasks/main.yaml
@@ -57,8 +57,7 @@
         {%- set base_name = file.path | basename -%}
         {%- set deploy_postfix = base_name.split('.') | first -%}
         {%- set template_content = lookup('file', file.path).split('\n') -%}
-        {%- set ns_line_list = template_content | select('search', '^\\s*name\\s*:\\s*') | list -%}
-        {{ [DEBUG] ns_line_list }}
+        {%- set ns_line_list = template_content | select('search', 'name:') | list -%}
       
         {%- if ns_line_list | length > 0 -%}
           {%- set ns_line = ns_line_list[0] -%}
