--- a/env-builder/roles/generate_solution_structure/tasks/main.yaml
+++ b/env-builder/roles/generate_solution_structure/tasks/main.yaml
@@ -56,17 +56,11 @@
       {%- for file in template_files.files -%}
         {%- set base_name = file.path | basename -%}
         {%- set deploy_postfix = base_name.split('.') | first -%}
-        {%- set template_content = lookup('file', file.path) | split('\n') -%}
-
-        {%- for line in template_content -%}
-          {%- if line is match('^\\s*name:\\s*') -%}
-            {%- set ns_line = line -%}
-            {%- set ns_value = ns_line.split(':', 1)[1] | trim | replace('"', '') -%}
-            {%- set ns_map = ns_map | combine({deploy_postfix: ns_value}) -%}
-          {%- endif -%}
-        {%- endfor -%}
-
-        {%- if deploy_postfix not in ns_map -%}
+        {%- set content = lookup('file', file.path) | from_yaml -%}
+        {%- if 'name' in content -%}
+          {%- set ns_value = content.name | replace('"', '') -%}
+          {%- set ns_map = ns_map | combine({deploy_postfix: ns_value}) -%}
+        {%- else -%}
           {%- set ns_map = ns_map | combine({deploy_postfix: ''}) -%}
         {%- endif -%}
       {%- endfor -%}
