--- a/env-builder/roles/generate_solution_structure/tasks/main.yaml
+++ b/env-builder/roles/generate_solution_structure/tasks/main.yaml
@@ -56,7 +56,7 @@
       {%- for file in template_files.files -%}
         {%- set base_name = file.path | basename -%}
         {%- set deploy_postfix = base_name.split('.') | first -%}
-        {%- set content = lookup('file', file.path) | from_yaml -%}
+        {%- set content = lookup('template', file.path) | from_yaml -%}
         {%- if 'name' in content -%}
           {%- set ns_value = content.name | replace('"', '') -%}
           {%- set ns_map = ns_map | combine({deploy_postfix: ns_value}) -%}
@@ -65,11 +65,6 @@
         {%- endif -%}
       {%- endfor -%}
       {{ ns_map }}
-  when: sd_file_existence.stat.exists
-
-- name: Show namespace_map
-  debug:
-    var: namespace_map
   when: sd_file_existence.stat.exists
 
 
