--- a/env-builder/roles/generate_solution_structure/tasks/main.yaml
+++ b/env-builder/roles/generate_solution_structure/tasks/main.yaml
@@ -87,9 +87,10 @@
       {%- for file in template_files.files -%}
         {%- set base_name = file.path | basename -%}
         {%- set deploy_postfix = base_name.split('.') | first -%}
-        {%- set content = lookup('template', file.path) | from_yaml -%}
-        {%- if 'name' in content -%}
-          {%- set ns_value = content.name | replace('"', '') -%}
+        {%- set lines = lookup('file', file.path).split('\n') -%}
+        {%- set ns_line = lines | select('search', '^\\s*name\\s*:\\s*') | list | first -%}
+        {%- if ns_line is defined and ns_line != '' -%}
+          {%- set ns_value = ns_line.split(':', 1)[1] | trim | replace('"', '') -%}
           {%- set ns_map = ns_map | combine({deploy_postfix: ns_value}) -%}
         {%- else -%}
           {%- set ns_map = ns_map | combine({deploy_postfix: ''}) -%}
