Testing new logic

--- a/env-builder/roles/generate_solution_structure/tasks/main.yaml
+++ b/env-builder/roles/generate_solution_structure/tasks/main.yaml
@@ -59,7 +59,7 @@
   set_fact:
     postfix_template_map: >-
       {%- set result = {} -%}
-      {%- for file in all_template_files.files -%}
+      {%- for file in all_template_files['files'] -%}
         {%- set name = file.path | basename -%}
         {%- set postfix = name.split('.')[0] -%}
         {%- set result = result | combine({postfix: file.path}) -%}
