Testing new logic

--- a/env-builder/roles/generate_solution_structure/tasks/main.yaml
+++ b/env-builder/roles/generate_solution_structure/tasks/main.yaml
@@ -59,6 +59,17 @@
   debug:
     var: all_template_files
 
+- name: show basename split
+  debug:
+    msg: >-
+      {{
+        all_template_files.files |
+        map(attribute='path') |
+        map('basename') |
+        map('regex_replace', '^([^.]+)\\..*$', '\\1') |
+        list
+      }}    
+
 - name: Build template path map by deployPostfix
   set_fact:
     postfix_template_map: "{{ _postfix_template_map }}"
