Testing new logic

--- a/env-builder/roles/generate_solution_structure/tasks/main.yaml
+++ b/env-builder/roles/generate_solution_structure/tasks/main.yaml
@@ -80,7 +80,7 @@
         all_template_files.files
         | map(attribute='path')
         | map('basename')
-        | map('regex_replace', '^(.*?)[.]', '\\1')
+        | map('regex_replace', '^(.*?)\\..*$', '\\\\1')
         | list
       }}
 
