Testing new logic

--- a/env-builder/roles/generate_solution_structure/tasks/main.yaml
+++ b/env-builder/roles/generate_solution_structure/tasks/main.yaml
@@ -70,6 +70,18 @@
         | list
       }}
 
+- name: Dummy test structure
+  set_fact:
+    solution_structure: >-
+      {%- set struct = {} -%}
+      {%- for postfix, path in postfix_template_map.items() -%}
+        {%- set lines = lookup('file', path).split('\n') -%}
+        {%- set name_line = lines | select('search', '^\\s*name\\s*:\\s*') | list | first | default('') -%}
+        {%- set ns = name_line.split(':', 1)[1] | trim | replace('"', '') if name_line else None -%}
+        {%- set struct = struct | combine({postfix: {'namespace': ns}}) -%}
+      {%- endfor -%}
+      {{ struct }}
+
 - name: Build final solution_structure
   set_fact:
     solution_structure: >-
