Testing new logic

--- a/env-builder/roles/generate_solution_structure/tasks/main.yaml
+++ b/env-builder/roles/generate_solution_structure/tasks/main.yaml
@@ -88,8 +88,8 @@
     msg: >-
       {{
         postfix_template_map.items()
-        | map('first')  # keys
-        | map('extract', postfix_template_map)  # paths
+        | map('first')
+        | map('extract', postfix_template_map)
         | map('lookup', 'file')
         | list
       }}      
